[Accessibility] BasicApp : fix footer structure, Increase text to a more readable size

--- a/basic-application/basic-application-webapp/src/main/java/org/iglooproject/basicapp/web/application/common/template/resources/styles/application/advanced/_layout.scss
+++ b/basic-application/basic-application-webapp/src/main/java/org/iglooproject/basicapp/web/application/common/template/resources/styles/application/advanced/_layout.scss
@@ -91,7 +91,7 @@ body {
 					}
 					
 					.footer-info-sha {
-						font-size: .5rem;
+						font-size: .8rem;
 					}
 				}
 			}
